[package]
name = "handout-srrs"
version = "0.1.0"
authors = ["Florian Bergmann <Bergmann.F@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-files = "0.2.2"
actix-web = "2.0"
actix-rt = "1.0"
comrak = "0.8.0"
tera = "1.4.0"